# cis568

./: .gitignore  pyproject.toml
.claude/: settings.json  settings.local.json
.github/: copilot-instructions.md
Activity/: Activity_2.ipynb  Assignment_3.docx  activity_3.ipynb  assignment_3.ipynb  assignment_3f.ipynb  d3_Assignment_2.html  network.html
Activity/actiity_echarts/: index.html  network.js  style.css
Activity/activity_echarts/: charts.js  index.html  style.css
Activity/assignment_3/: index.html  network.js  style.css
Activity/assignment_4/: README.MD  index.html
Final/: README.md  Van_der_Pol_Visualization_Presentation.pptx  index.html  page2.html  page3.html  page4.html  page5.html  page6.html  page7.html
